--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <section>
         <div>
             <label for="numero">Número: </label>
-            <input type="number" id="numero" autocomplete="off">
+            <input type="number" id="numero" autocomplete="off"
+                   onkeydown="if (event.key === 'Enter') {listar();}">
             <input type="button" value ="Gerar Tabuada" onclick="resultado()">
         </div>
         <select>
