--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <label for="numero">Número: </label>
             <input type="number" id="numero" autocomplete="off"
-                   onkeydown="if (event.key === 'Enter') {listar();}">
+                   onkeydown="if (event.key === 'Enter') {resultado();}">
             <input type="button" value ="Gerar Tabuada" onclick="resultado()">
         </div>
         <select>
